test/vm/fails/invalid_op_set.js

var map;
map[123] = true;
